--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ nav{
 
 }
 
-li{
+ul li{
 	float: left;
 	padding: 15px;
 	padding: top: 30px;
@@ -39,7 +39,12 @@ a{
 }
 
 a:hover{
-	color: red;
-	background-color: black;
-}
+	color: ;
+}	
+	
+
+	
+
+
+
 
