--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+	padding: 10px;
 	margin: 0;
 }
 nav{
@@ -38,9 +39,25 @@ a{
 	color: white;
 }
 
-a:hover{
-	color: ;
-}	
+a :hover{
+	color: yellow;
+	background-coior: ;
+}
+.footer{
+	background-color: blue;
+	height: 80px;
+	padding-top: 150px;
+	width: 100%;
+	position: relative;
+}
+marquee{
+	font-size: 45px;
+	colior: #ffffff;
+}
+span{
+	color: white;
+}
+
 	
 
 	
